Haciendo cambios en XMLs Agregando Fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="tvInformacion">Como te enteraste de BITLAB?</string>
     <string name="editTextInformacion">Cuentanos!</string>
     <string name="btnEnviar">Enviar</string>
+    <string name="tv_descripcion_fg_success">Tus datos han sido enviados con éxito</string>
 </resources>
