Implementando Firestore & Storage

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="editTextInformacion">Cuentanos!</string>
     <string name="btnEnviar">Enviar</string>
     <string name="tv_descripcion_fg_success">Tus datos han sido enviados con éxito</string>
+    <string name="string_textview_coleccion"><u>Ver coleccion</u></string>
 
 
     <string-array name="spinner_bitlab_information_formview">
